--- a/setup.html
+++ b/setup.html
@@ -731,8 +731,8 @@
       <div class="modal-content align-items-center">
         <a href="" data-dismiss="modal" aria-label="Close">&times;</a>
         <h5>You have made some change <br>What should wee do?</h5>
-        <button type="submit" class="btn btn-success pr-5 pl-5 mt-4 mb-4">Save and Proceed</button>
-        <a href="#" class="text-success"><u><small>Reset all and LIVE</small></u></a>
+        <a href="congrats.html" class="btn btn-success pr-5 pl-5 mt-4 mb-4">Save and Proceed</a>
+        <a href="congrats.html" class="text-success"><u><small>Reset all and LIVE</small></u></a>
       </div>
     </div>
   </div>
