add user experience

--- a/congrats.html
+++ b/congrats.html
@@ -117,7 +117,7 @@
         <div class="rateExperience">
             <div class="contentArea">
                 <div class="rateContainer">
-                    <p>How was your onboarding experience?</p>
+                    <p class="m-0">How was your onboarding experience?</p>
                 </div>
             </div>
         </div>
