guide page fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <a href="#" class="logo">
         <img src="images/logo_gr.png" alt="Gratisfaction">
       </a>
-      <a href="mailto:info@appsmav.com" class="button buttonGrey">Write to Us</a>
+      <a href="./setup.html" class="button buttonBordered">Skip guide <i class="icon-right-arrow"></i></a>
+      <!-- <a href="mailto:info@appsmav.com" class="button buttonGrey">Write to Us</a> -->
     </header>
     <div class="mainBlock">
       <section class="section sectionWelcome">
@@ -29,8 +30,8 @@
             <img src="images/splash.png" />
           </figure>
           <h1>Welcome to Gratisfaction</h1>
-          <button class="button buttonBlack">view Quick setup guide <i class="icon-right-arrow"></i></button>
-          <a href="/setup.html" class="skip">Skip guide and start setup</a>
+          <button class="button buttonBlack" onclick="fullpage_api.moveTo(2)">view Quick setup guide <i class="icon-right-arrow"></i></button>
+          <a href="./setup.html" class="skip">Skip guide and start setup</a>
         </div>
       </section>
       <section class="section sectionSetup" data-step="1">
@@ -111,7 +112,7 @@
               <p>More features are <br>available after the <br>initial setup</p>
             </li>
           </ul>
-          <a href="/setup.html" class="button buttonOrange">setup now <i class="icon-right-arrow"></i></a>
+          <a href="./setup.html" class="button buttonOrange">setup now <i class="icon-right-arrow"></i></a>
         </div>
       </section>
     </div>
