--- a/setup.html
+++ b/setup.html
@@ -274,7 +274,48 @@
                         <a href="#" class="btn btn-link mt-2 p-0"><small>Sample</small></a>
                       </div>
                       <div class="form-group col-md-12 mb-2">
-                        <label for="inputEmail4">On-Click URL</label>
+                        <label for="inputEmail4">Connect URL from facebook</label>
+                        <input type="text" class="form-control" id="inputEmail4" value="www.google.com/product.com">
+                      </div>
+                      <div class="col-md-12 ">
+                        <div class="custom-control d-flex scale-8 to-00 custom-checkbox">
+                          <input type="checkbox" class="custom-control-input" id="customCheck1">
+                          <label class="custom-control-label" for="customCheck1">Is your website has HTTPS?</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="stepFoot d-flex justify-content-end">
+                      <a href="#" class="resetSetting">
+                        <i class="material-icons">
+                          refresh
+                        </i>
+                        <u>Reset to recommended settings</u>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="setupSteps">
+                    <div class="stepHead">
+                      <h3>Twitter Share Setup</h3>
+                      <p>When members share your message on Twitter</p>
+                      <label class="switch" for="twShareSetup">
+                        <input type="checkbox" checked id="twShareSetup" />
+                        <i></i>
+                      </label>
+                    </div>
+                    <div class="stepBody">
+                      <div class="form-group mt-0 mb-5 col-md-5">
+                        <label for="inputEmail4">Reward Points</label>
+                        <input type="number" class="form-control" id="inputEmail4" value="100">
+                      </div>
+                      <div class="form-group mb-5 col-md-12">
+                        <label for="inputEmail4">Twitter Share Text</label>
+                        <textarea class="form-control" cols="30" rows="3">Hey check out my new product.</textarea>
+                        <a href="#" class="btn btn-link mt-2 p-0"><small>Sample</small></a>
+                      </div>
+                      <div class="form-group col-md-12 mb-2">
+                        <label for="inputEmail4">Connect URL from Twitter</label>
                         <input type="text" class="form-control" id="inputEmail4" value="www.google.com/product.com">
                       </div>
                       <div class="col-md-12 ">
@@ -334,6 +375,38 @@
                         <p>
                           These templates available only when basic setups are completed
                         </p>
+                      </div>
+                    </div>
+                    <div class="stepFoot d-flex justify-content-end">
+                      <a href="#" class="resetSetting">
+                        <i class="material-icons">
+                          refresh
+                        </i>
+                        <u>Reset to recommended settings</u>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="setupSteps">
+                    <div class="stepHead">
+                      <h3>WOOReview  Rewards</h3>
+                      <p>Reward reviews of products, services by incentivizing</p>
+                      <label class="switch" for="twShareSetup">
+                        <input type="checkbox" checked id="twShareSetup" />
+                        <i></i>
+                      </label>
+                    </div>
+                    <div class="stepBody">
+                      <div class="form-group col-md-12 mb-2">
+                        <label for="inputEmail4">Reward points per review</label>
+                        <input type="text" class="form-control" id="inputEmail4" value="www.google.com/product.com">
+                      </div>
+                      <div class="col-md-12 ">
+                        <div class="custom-control d-flex scale-8 to-00 custom-checkbox">
+                          <input type="checkbox" class="custom-control-input" id="woo">
+                          <label class="custom-control-label" for="woo">Reward only for approved reviews</label>
+                        </div>
                       </div>
                     </div>
                     <div class="stepFoot d-flex justify-content-end">
