add setup in congrats page

--- a/congrats.html
+++ b/congrats.html
@@ -88,6 +88,7 @@
                         <div class="setupList">
                             <ul>
                                 <li>
+                                    <a href="./setup.html" class="gotoLink"></a>
                                     <h5 class="m-0">1. Setup</h5>
                                     <div>
                                         <i class="material-icons text-success mr-4">done</i>
@@ -95,6 +96,7 @@
                                     </div>
                                 </li>
                                 <li>
+                                    <a href="./setup.html" class="gotoLink"></a>
                                     <h5 class="m-0">2. Rewards</h5>
                                     <div>
                                         <i class="material-icons text-success mr-4">done</i>
@@ -102,6 +104,7 @@
                                     </div>
                                 </li>
                                 <li>
+                                    <a href="./setup.html" class="gotoLink"></a>
                                     <h5 class="m-0">3. Themes</h5>
                                     <div>
                                         <i class="material-icons text-success mr-4">done</i>
