--- a/setup.html
+++ b/setup.html
@@ -4,8 +4,8 @@
   <title>GR - Onboarding</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="https://fonts.googleapis.com/css?family=Heebo:400,900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="scripts/libs/rangeslider/rangeslider.css">
@@ -24,7 +24,7 @@
       </div>
       <div class="head">
         <div>
-          <h2>Welcome, Start with a quick setup.</h2>
+          <h1>Welcome, Start with a quick setup.</h1>
           <ul class="paginate">
             <li class="completed">1</li>
             <li class="current">2</li>
@@ -43,7 +43,7 @@
     <div class="setupContainer" id="setupAccordion">
       <div class="card">
         <div class="card-header active" data-toggle="collapse" data-target="#setup" aria-expanded="true" aria-controls="setup">
-          <h3>1. Setup</h3>
+          <h2>1. Setup</h2>
         </div>
 
         <div id="setup" class="collapse show" aria-labelledby="headingOne" data-parent="#setupAccordion">
@@ -460,7 +460,7 @@
       <div class="card rewardsBlock">
         <div class="card-header " data-toggle="collapse" data-target="#rewards" aria-expanded="true"
           aria-controls="rewards">
-          <h3>2. Rewards</h3>
+          <h2>2. Rewards</h2>
           <div class="additionalElements">
             <a href="#" class="btn btn-success addReward">Add Reward</a>
           </div>
@@ -532,7 +532,7 @@
       <div class="card themesBlock">
         <div class="card-header" data-toggle="collapse" data-target="#themes" aria-expanded="true"
           aria-controls="themes">
-          <h3>3. Themes</h3>
+          <h2>3. Themes</h2>
         </div>
         <div id="themes" class="collapse" aria-labelledby="headingOne" data-parent="#setupAccordion">
           <div class="card-body">
@@ -700,7 +700,7 @@
                         </div>
                       </div>
                     </div>
-                    <a class="btn btn-primary btnAdvancedSettings collapsed" data-toggle="collapse" href="#advanceSettings" role="button" aria-expanded="false" aria-controls="widgetAdvanced">Advanced Settings</a>
+                    <a class="btn btn-default btnAdvancedSettings collapsed" data-toggle="collapse" href="#advanceSettings" role="button" aria-expanded="false" aria-controls="widgetAdvanced">Advanced Settings</a>
                     <div class="collapse multi-collapse" id="advanceSettings">
                       <ul class="nav nav-tabs widget-tabs-nav" id="widgetAdvanced" role="tablist">
                         <li class="nav-item">
