--- a/setup.html
+++ b/setup.html
@@ -41,8 +41,8 @@
       </div>
     </header>
     <div class="setupContainer" id="setupAccordion">
-      <div class="card">
-        <div class="card-header active" data-toggle="collapse" data-target="#setup" aria-expanded="true" aria-controls="setup">
+      <div class="card active">
+        <div class="card-header" data-toggle="collapse" data-target="#setup" aria-expanded="true" aria-controls="setup">
           <h2>1. Setup</h2>
         </div>
 
@@ -458,7 +458,7 @@
         </div>
       </div>
       <div class="card rewardsBlock">
-        <div class="card-header " data-toggle="collapse" data-target="#rewards" aria-expanded="true"
+        <div class="card-header collapsed " data-toggle="collapse" data-target="#rewards" aria-expanded="true"
           aria-controls="rewards">
           <h2>2. Rewards</h2>
           <div class="additionalElements">
@@ -530,7 +530,7 @@
         </div>
       </div>
       <div class="card themesBlock">
-        <div class="card-header" data-toggle="collapse" data-target="#themes" aria-expanded="true"
+        <div class="card-header collapsed" data-toggle="collapse" data-target="#themes" aria-expanded="true"
           aria-controls="themes">
           <h2>3. Themes</h2>
         </div>
