--- a/congrats.html
+++ b/congrats.html
@@ -88,9 +88,13 @@
 
                         <div class="setupContainer" id="setupAccordion">
                             <div class="card">
-                                <div class="card-header collapsed" data-toggle="collapse" data-target="#setup"
+                                <div class="card-header justify-content-start align-items-center collapsed" data-toggle="collapse" data-target="#setup"
                                     aria-expanded="true" aria-controls="setup">
                                     <h2>1. Setup</h2>
+                                    <div class="alert alert-warning d-inline-flex align-items-center mb-0 ml-2">
+                                        <i class="text-primary material-icons mr-2">info</i>
+                                        You can edit, pause any setup anytime
+                                    </div>
                                 </div>
 
                                 <div id="setup" class="collapse" aria-labelledby="headingOne"
@@ -215,7 +219,8 @@
                                                 </div>
                                             </div>
                                         </div><br>
-                                        <h6 class="mt-3 mb-3 pausedRewardHead">Paused Rewards (During Setup)</h6><br><div class="setupItemContainer">
+                                        <h6 class="mt-3 mb-3 pausedRewardHead">Paused Rewards (During Setup)</h6><br>
+                                        <div class="setupItemContainer">
                                             <div class="setupItemList">
                                                 <div class="stepHead">
                                                     <h3>WOO Review Rewards</h3>
