change Recommend floater

--- a/setup.html
+++ b/setup.html
@@ -81,9 +81,11 @@
                         </div>
                         <div class="recommendFloater">
                           <i class="material-icons info">info</i>
-                          <i class="material-icons badge badge-pill badge-warning">star</i>
-                          Recommended setting it up as 1:1, And, you can control the redemption value through "2.Rewards
-                          Section"
+                          <div class="floaterTxt">
+                            <i class="material-icons badge badge-pill badge-warning">star</i>
+                            Recommended setting it up as 1:1, And, you can control the redemption value through "2.Rewards
+                            Section"
+                          </div>
                         </div>
                       </div>
                     </div>
