--- a/setup.html
+++ b/setup.html
@@ -25,10 +25,10 @@
       <div class="head">
         <div>
           <h1>Welcome, Start with a quick setup.</h1>
-          <ul class="paginate">
-            <li class="completed">1</li>
-            <li class="current">2</li>
-            <li>3</li>
+          <ul class="paginate" id="setupPaginate">
+            <li data-paginate="setup" class="completed">1</li>
+            <li data-paginate="rewards" class="current">2</li>
+            <li data-paginate="themes">3</li>
           </ul>
         </div>
       </div>
@@ -71,24 +71,38 @@
                       </div>
                       <div class="stepWrapper">
                           <h6>Loyalty Points</h6>
-                          <div class="btn-group btnLoyaltyPoints" role="group">
-                            <button type="button" class="btn btn-dark">Fixed</button>
-                            <button type="button" class="btn btn-outline-dark">Percentage</button>
-                          </div><br><br>
-                          <div class="form-row align-items-center">
-                            <div class="form-group col-md-5">
-                              <div class="input-group-prepend">€</div>
-                              <label for="inputEmail4">Purchase for</label>
-                              <input type="number" class="form-control" id="inputEmail4" value="1">
+                          <form class="form-points-program">
+                            <div class="btn-group btn-group-toggle btnGrpToggle" data-toggle="buttons">
+                              <label class="btn btn-outline-dark active">
+                                <input type="radio" name="loyaltyPoints" id="fixed" autocomplete="off" checked> Fixed
+                              </label>
+                              <label class="btn btn-outline-dark">
+                                <input type="radio" name="loyaltyPoints" id="percentage" autocomplete="off"> Percentage
+                              </label>
+                            </div><br><br>
+                            <div id="input_fixed" class="loyaltyPtForm form-row align-items-center">
+                              <div class="form-group col-md-5">
+                                <div class="input-group-prepend">€</div>
+                                <label for="purchaseFor">Purchase for</label>
+                                <input type="number" class="form-control" id="purchaseFor" value="1" data-bouncer-target="#purchaseFormsg" required>
+                                <div id="purchaseFormsg"></div>
+                              </div>
+                              <div class="col-md-2 text-center">
+                                to get
+                              </div>
+                              <div class="form-group col-md-5">
+                                <label for="rewardPoint">Reward Point</label>
+                                <input type="number" class="form-control" id="rewardPoint" value="1" data-bouncer-target="#rewardPointmsg" required>
+                                <div id="rewardPointmsg"></div>
+                              </div>
                             </div>
-                            <div class="col-md-2 text-center">
-                              to get
+                            <div id="input_percentage" class="loyaltyPtForm form-row" style="display: none;">
+                              <div class="form-group col-md-5">
+                                <label for="inputEmail4">% of purchase amount.</label>
+                                <input type="number" class="form-control" id="inputEmail4" value="1">
+                              </div>
                             </div>
-                            <div class="form-group col-md-5">
-                              <label for="inputEmail4">Reward Point</label>
-                              <input type="number" class="form-control" id="inputEmail4" value="1">
-                            </div>
-                          </div>
+                          </form>
                       </div>
                     </div>
                     <div class="stepFoot d-flex justify-content-end">
@@ -125,9 +139,13 @@
                         <h6>Welcome Note</h6>
                         <div class="row d-flex align-items-center">
                           <div class="col-md-5">
-                            <div class="btn-group btnLoyaltyPoints" role="group">
-                              <button type="button" class="btn btn-dark">Show</button>
-                              <button type="button" class="btn btn-outline-dark">Hidden</button>
+                            <div class="btn-group btn-group-toggle btnGrpToggle" data-toggle="buttons">
+                              <label class="btn btn-outline-dark active">
+                                <input type="radio" name="welcomeNote" id="show" autocomplete="off" checked> Show
+                              </label>
+                              <label class="btn btn-outline-dark">
+                                <input type="radio" name="welcomeNote" id="hide" autocomplete="off"> Hidden
+                              </label>
                             </div>
                           </div>
                           <a href="#" class="btn btn-link">Sample</a>
@@ -215,12 +233,15 @@
                         <h6>Limit Referral Rewards Per Users?</h6>
                         <div class="row">
                           <div class="col-md-12 mt-2 mb-3">
-                            <div class="btn-group btnLoyaltyPoints" role="group">
-                              <button type="button" class="btn btn-dark">Yes</button>
-                              <button type="button" class="btn btn-outline-dark">No</button>
+                            <div class="btn-group btnGrpToggle btnGrpCheck">
+                              <input type="checkbox" checked name="limitReferral" id="limitReferral">
+                              <label for="limitReferral">
+                                <span class="btn btn-outline-dark">Yes</span>
+                                <span class="btn btn-outline-dark">No</span>
+                              </label>
                             </div>
                           </div>
-                          <div class="mt-3 mb-2 form-group col-md-5">
+                          <div id="limitReferralForm" class="mt-3 mb-2 form-group col-md-5">
                             <label for="">Max. Rewards</label>
                             <input type="number" class="form-control" id="inputEmail4" value="1">
                           </div>
@@ -233,13 +254,19 @@
                               <span class="badge badge-pill badge-primary">i</span>
                               We will create coupon automatically on your webstore
                             </div>
-                            <div class="btn-group btnLoyaltyPoints" role="group">
-                              <button type="button" class="btn btn-outline-dark">Fixed off</button>
-                              <button type="button" class="btn btn-dark">Percentage off</button>
-                              <button type="button" class="btn btn-outline-dark">Free Shipping</button>
+                            <div class="btn-group btn-group-toggle btnGrpToggle" data-toggle="buttons">
+                              <label class="btn btn-outline-dark active">
+                                <input type="radio" name="cType" id="fixed" autocomplete="off" checked> Fixed off
+                              </label>
+                              <label class="btn btn-outline-dark">
+                                <input type="radio" name="cType" id="percentage" autocomplete="off"> Percentage off
+                              </label>
+                              <label class="btn btn-outline-dark">
+                                <input type="radio" name="cType" id="freeship" autocomplete="off"> Free shipping
+                              </label>
                             </div>
                           </div>
-                          <div class="row col-md-12">
+                          <div class="row col-md-12 maxCouponValue">
                             <div class="form-group col-md-6">
                               <div class="input-group-prepend">€</div>
                               <label for="">Max. Coupon Value</label>
@@ -843,6 +870,7 @@
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="scripts/libs/colorpicker/bootstrap-colorpicker.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/bouncer@1/dist/bouncer.polyfills.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
