--- a/setup.html
+++ b/setup.html
@@ -84,16 +84,14 @@
                               <div class="form-group col-md-5">
                                 <div class="input-group-prepend">€</div>
                                 <label for="purchaseFor">Purchase for</label>
-                                <input type="number" class="form-control" id="purchaseFor" value="1" data-bouncer-target="#purchaseFormsg" required>
-                                <div id="purchaseFormsg"></div>
+                                <input type="number" class="form-control" id="purchaseFor" value="1" required>
                               </div>
                               <div class="col-md-2 text-center">
                                 to get
                               </div>
                               <div class="form-group col-md-5">
                                 <label for="rewardPoint">Reward Point</label>
-                                <input type="number" class="form-control" id="rewardPoint" value="1" data-bouncer-target="#rewardPointmsg" required>
-                                <div id="rewardPointmsg"></div>
+                                <input type="number" class="form-control" id="rewardPoint" value="1" required>
                               </div>
                             </div>
                             <div id="input_percentage" class="loyaltyPtForm form-row" style="display: none;">
@@ -870,7 +868,6 @@
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="scripts/libs/colorpicker/bootstrap-colorpicker.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/bouncer@1/dist/bouncer.polyfills.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
