--- a/congrats.html
+++ b/congrats.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+        <div class="grOnboarding" ng-app="grOnboarding" ng-controller="onBoardController">
     <div class="congratsPage">
         <header>
             <div class="contentArea">
@@ -816,6 +817,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="scripts/main.js"></script>
+</div>
 </body>
 
 </html>
