--- a/setup.html
+++ b/setup.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="grOnboarding" ng-app="grOnboarding" ng-controller="onBoardController">
   <div class="setupPage">
     <header>
       <div class="grad">
@@ -897,6 +898,7 @@
   <script src="scripts/libs/colorpicker/bootstrap-colorpicker.js"></script>
   <script src="scripts/libs/colorpicker/bootstrap-colorpicker.js"></script>
   <script src="scripts/main.js"></script>
+</div>
 </body>
 
 </html>
